# rust-all-in-one-projects

./: .gitignore  Cargo.toml  README.md  requirements.txt  tarpaulin-report.html  workspace_rust-all-in-one-projects.code-workspace
docker/: build_docker.sh  run_docker.sh
src/: main.rs
workspace/: ________WORKSPACE________.md
workspace/projects/: PROJECTS.md
workspace/projects/cleancode_survey/my/: my-cleancode_survey.md
workspace/projects/cleancode_survey/my/cleancode_survey_bin/: Cargo.toml
workspace/projects/cleancode_survey/my/cleancode_survey_bin/data/: 1.json
workspace/projects/cleancode_survey/my/cleancode_survey_bin/src/: cleancode_survey_main_bin.rs
workspace/projects/cleancode_survey/my/cleancode_survey_lib/: Cargo.toml
workspace/projects/cleancode_survey/my/cleancode_survey_lib/src/: models.rs
workspace/projects/cleancode_survey/my/cleancode_survey_lib/src/core/: factory.rs  mod.rs  sample.rs
workspace/projects/error/master-rust/todolist-parser/: Cargo.toml  mr_error_todolist_parser.md
workspace/projects/error/master-rust/todolist-parser/todolist_parser_bin/: Cargo.toml
workspace/projects/error/master-rust/todolist-parser/todolist_parser_bin/src/: todolist-parser-main.rs
workspace/projects/error/master-rust/todolist-parser/todolist_parser_lib/: Cargo.toml
workspace/projects/error/master-rust/todolist-parser/todolist_parser_lib/src/: lib.rs
workspace/projects/error/master-rust/todolist-parser/todolist_parser_lib/src/core/: error.rs
workspace/projects/file/rust-in-action/: ria-file1.md
workspace/projects/pacman/: Readme.Pacman.md
workspace/projects/pacman/my/: my-pacman.md
workspace/projects/pacman/my/pacman_bin/: .gitignore  Cargo.toml
workspace/projects/pacman/my/pacman_bin/src/: pacman_main_bin.rs
workspace/projects/pacman/my/pacman_lib/: Cargo.toml
workspace/projects/pacman/my/pacman_lib/src/: lib.rs  models.rs
workspace/projects/pacman/my/pacman_lib/src/core/: boradspace.rs  error.rs  factory.rs  filereader.rs  game.rs  mod.rs  pacman.rs  play.rs  stateboard.rs  stategame.rs  statepacman.rs  string.rs
workspace/projects/pacman/my/pacman_lib/src/core/commands/: text-sample-4.txt
workspace/projects/pacman/my/pacman_lib/test/: integration_lib_test.rs
workspace/projects/pacman/my/pacman_lib/test/common/: boardspace_test.rs  mod.rs  play_test.rs
workspace/projects/pacman/my/pacman_test/: Cargo.toml
workspace/projects/pacman/my/pacman_test/test/: integration_indep_test.rs
workspace/projects/process_line/rust-in-action/process_line_bin/src/: process_line_main_bin.rs
workspace/projects/satelite_messaging/rust-in-action/: ria-satelite-messaging.md
workspace/projects/survey/rust-survey/: Cargo.toml  my_rust_survey_json.md
workspace/projects/survey/rust-survey/data/: 1.json
workspace/projects/survey/rust-survey/rust-survey-json_bin/: Cargo.toml
workspace/projects/survey/rust-survey/rust-survey-json_bin/src/: rust-survey_main_bin.rs
workspace/projects/survey/rust-survey/rust-survey-json_lib/: Cargo.toml
workspace/projects/survey/rust-survey/rust-survey-json_lib/src/core/: factory.rs
workspace/projects/survey/rust-survey/rust-survey-json_lib/test/: integration_test.rs
workspace/shared/: Cargo.toml
workspace/shared/src/: models.rs
