[package]
name = "rust-all-in-one"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]

members = [


    "workspace/shared",


    "workspace/projects/pacman/my/pacman_bin",
    "workspace/projects/pacman/my/pacman_lib",
    "workspace/projects/cleancode_survey/my/cleancode_survey_bin",
    "workspace/projects/cleancode_survey/my/cleancode_survey_lib",

    "workspace/projects/file/rust-in-action/file_bin",
    "workspace/projects/file/rust-in-action/file_lib",
    "workspace/projects/fuzzme/rust-in-action/fuzz_bin",
    "workspace/projects/fuzzme/rust-in-action/fuzz_lib",
    "workspace/projects/satelite_messaging/rust-in-action/satelite_messaging_bin",
    "workspace/projects/satelite_messaging/rust-in-action/satelite_messaging_lib",
    "workspace/projects/process_line/rust-in-action/process_line_bin",
    "workspace/projects/process_line/rust-in-action/process_line_lib",
]
