[package]
edition = "2021"
name = "rust-all-in-one-projects"
version = "0.1.0"
authors = ["Arman <armanriyazi.github.io@gmail.com>"]
description = "A collection of asesome projects"
readme = "README.md"
license = "MPL-2.0"
homepage = "https://armanriazi.github.io/site/public/programming/rust/rust"
repository = "https://github.com/armanriazi/armanriazi-awesome-rust"
keywords = ["api","rest","cargo","rust", "cryptocurrency"]
categories = ["command-line-utilities", "config", "development-tools", "development-tools::cargo-plugins", "accessibility"]

[workspace]
members = [

    "workspace/shared",


    "workspace/projects/error/master-rust/todolist-parser/todolist_parser_bin",
    "workspace/projects/error/master-rust/todolist-parser/todolist_parser_lib",

    "workspace/projects/pacman/my/pacman_bin",
    "workspace/projects/pacman/my/pacman_lib",
    "workspace/projects/pacman/my/pacman_test",

    "workspace/projects/survey/rust-survey/rust-survey-json_bin",
    "workspace/projects/survey/rust-survey/rust-survey-json_lib",

    "workspace/projects/file/rust-in-action/file_bin",
    "workspace/projects/file/rust-in-action/file_lib",

    "workspace/projects/fuzzme/rust-in-action/fuzz_bin",
    "workspace/projects/fuzzme/rust-in-action/fuzz_lib",

    "workspace/projects/satelite_messaging/rust-in-action/satelite_messaging_bin",
    "workspace/projects/satelite_messaging/rust-in-action/satelite_messaging_lib",

    "workspace/projects/process_line/rust-in-action/process_line_bin",
    "workspace/projects/process_line/rust-in-action/process_line_lib",
]
