[package]
edition = "2021"
name = "cleancode_survey_lib"
version = "0.1.0"
authors = ["ArmanRiazi <arman2riazi@gmail.com>"]

[dev-dependencies]
proptest = "1"
pretty_assertions = "1"
log = "0.4.0"

[dependencies]
log = "0.4.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono="0.4.23"
proptest = "1"
