[package]
edition = "2021"
name = "pacman_lib"
version = "0.1.0"

[dev-dependencies]
proptest = "1"
pretty_assertions = "1"

[dependencies]
log = "0.4.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
array2d="0.3.0"

[[test]]
doc = true
name = "integration_lib_test"
path = "test/integration_lib_test.rs"
test = true