[package]
edition = "2021"
name = "pacman_lib"
version = "0.1.0"



[dependencies]
log = "0.4.16"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
array2d="0.3.0"
tokio = { version = "1.23.0", features = ["full"] }

[[test]]
doc = true
name = "integration_lib_test"
path = "test/integration_lib_test.rs"
test = true