[package]
edition = "2021"
name = "todolist_parser_bin"
version = "0.1.0"
authors = ["Arman <armanriyazi.github.io@gmail.com>"]
description = "A collection of awesome projects"
readme = "README.md"
license = "MPL-2.0"
homepage = "https://armanriazi.github.io/site/public/programming/rust/rust"
repository = "https://github.com/armanriazi/armanriazi-awesome-rust"
keywords = ["dynamic","error"]
categories = ["development-tools", "accessibility", "error-handle","parsing"]

[[bin]]
doc = true
name = "todolist-parser-main"
path = "src/todolist-parser-main.rs"


[dependencies]
todolist_parser_lib = { path = "../todolist_parser_lib"}